@@ -43,12 +43,12 @@ module Raylib
   RL_MAX_SHADER_LOCATIONS = 32                                # Maximum number of shader locations supported
   RL_CULL_DISTANCE_NEAR = 0.01                                # Default projection matrix near cull distance
   RL_CULL_DISTANCE_FAR = 1000.0                               # Default projection matrix far cull distance
-  RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION = "vertexPosition"   # Binded by default to shader location: 0
-  RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD = "vertexTexCoord"   # Binded by default to shader location: 1
-  RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL = "vertexNormal"       # Binded by default to shader location: 2
-  RL_DEFAULT_SHADER_ATTRIB_NAME_COLOR = "vertexColor"         # Binded by default to shader location: 3
-  RL_DEFAULT_SHADER_ATTRIB_NAME_TANGENT = "vertexTangent"     # Binded by default to shader location: 4
-  RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD2 = "vertexTexCoord2" # Binded by default to shader location: 5
+  RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION = "vertexPosition"   # Bound by default to shader location: 0
+  RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD = "vertexTexCoord"   # Bound by default to shader location: 1
+  RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL = "vertexNormal"       # Bound by default to shader location: 2
+  RL_DEFAULT_SHADER_ATTRIB_NAME_COLOR = "vertexColor"         # Bound by default to shader location: 3
+  RL_DEFAULT_SHADER_ATTRIB_NAME_TANGENT = "vertexTangent"     # Bound by default to shader location: 4
+  RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD2 = "vertexTexCoord2" # Bound by default to shader location: 5
   RL_DEFAULT_SHADER_UNIFORM_NAME_MVP = "mvp"                  # model-view-projection matrix
   RL_DEFAULT_SHADER_UNIFORM_NAME_VIEW = "matView"             # view matrix
   RL_DEFAULT_SHADER_UNIFORM_NAME_PROJECTION = "matProjection" # projection matrix
@@ -84,9 +84,9 @@ module Raylib
   MAX_MESH_VERTEX_BUFFERS = 7                                 # Maximum vertex buffers (VBO) per mesh
   SUPPORT_FILEFORMAT_WAV = 1
   SUPPORT_FILEFORMAT_OGG = 1
+  SUPPORT_FILEFORMAT_MP3 = 1
   SUPPORT_FILEFORMAT_XM = 1
   SUPPORT_FILEFORMAT_MOD = 1
-  SUPPORT_FILEFORMAT_MP3 = 1
   AUDIO_DEVICE_FORMAT = "ma_format_f32"                       # Device output format (miniaudio: float-32bit)
   AUDIO_DEVICE_CHANNELS = 2                                   # Device output channels: stereo
   AUDIO_DEVICE_SAMPLE_RATE = 0                                # Device sample rate (device default)
